[gd_scene load_steps=4 format=3 uid="uid://d2wqi1i72frku"]

[ext_resource type="Script" uid="uid://dj06qg0fu3m5x" path="res://FinisMenu.gd" id="1_o76we"]

[sub_resource type="LabelSettings" id="LabelSettings_o76we"]
font_size = 17

[sub_resource type="LabelSettings" id="LabelSettings_jiqvx"]
font_size = 43

[node name="FinishMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o76we")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -152.5
offset_right = 320.0
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.376658, 0.376658, 0.376658, 1)

[node name="main Menu" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 83.0
offset_top = 208.0
offset_right = 230.0
offset_bottom = 248.0
text = "Quit"

[node name="Button" type="Button" parent="ColorRect"]
top_level = true
layout_mode = 0
offset_left = 446.0
offset_top = 375.0
offset_right = 644.0
offset_bottom = 417.0
text = "NEXT"

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.5
offset_top = 50.5
offset_right = 162.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
text = "Waktu tersisa :"

[node name="Label" type="Label" parent="ColorRect/Label"]
layout_mode = 0
offset_left = 118.5
offset_top = -0.5
offset_right = 197.5
offset_bottom = 22.5
text = "nigga"

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 352.5
offset_top = 233.5
offset_right = 467.5
offset_bottom = 256.5
text = "Soal Difficulty :"

[node name="Pass" type="Label" parent="ColorRect/Label2"]
layout_mode = 0
offset_left = 127.5
offset_top = 0.5
offset_right = 194.5
offset_bottom = 23.5
text = "Yes"

[node name="Label3" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 351.0
offset_top = 143.0
offset_right = 504.0
offset_bottom = 179.0
text = "Total Score :"
label_settings = SubResource("LabelSettings_o76we")

[node name="score" type="Label" parent="ColorRect/Label3"]
layout_mode = 0
offset_left = 108.0
offset_top = 2.0
offset_right = 148.0
offset_bottom = 25.0
text = "- "

[node name="Label4" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 229.0
offset_top = 37.0
offset_right = 442.0
offset_bottom = 96.0
text = "Finish"
label_settings = SubResource("LabelSettings_jiqvx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 352.0
offset_top = 169.0
offset_right = 395.0
offset_bottom = 192.0
text = "Best :"

[node name="bestScore" type="Label" parent="ColorRect/Label5"]
layout_mode = 0
offset_left = 50.0
offset_right = 90.0
offset_bottom = 23.0
text = "-"

[connection signal="pressed" from="ColorRect/main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
